fixed UI layout issues

--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -31,12 +31,17 @@
 } */
 
 .popular-item {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 20px;
   margin-top: 40px;
-  justify-content: center;
-  /* justify-content: space-between; */
+  justify-content: center; */
+
+   display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px; 
+  margin-top: 40px; 
+  
 }
 
 /* Laptop */
